--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "tsnd --transpile-only --ignore-watch node_modules --respawn src/server.ts",
-    "knex:migrate": "knex --knexfile knexfile.ts migrate:latest ",
+    "start": "tsnd --transpile-only --ignore-watch node_modules --respawn src/server.js",
+    "knex:migrate": "knex --knexfile knexfile.js migrate:latest ",
     "knex:migrate:rollback": "knex --knexfile knexfile.ts migrate:knex:migrate:rollback"
   },
   "devDependencies": {
@@ -15,10 +15,12 @@
     "typescript": "^4.0.2"
   },
   "dependencies": {
-    "@types/node": "^14.11.5",
+    "@types/node": "^14.11.8",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "express": "^4.17.1",
     "knex": "^0.21.6",
+    "multer": "^1.4.2",
     "mysql": "^2.18.1",
     "sqlite3": "^5.0.0"
   }
